--- a/spleeter.ipynb
+++ b/spleeter.ipynb
@@ -132,7 +132,7 @@
    },
    "outputs": [],
    "source": [
-    "!spleeter separate -i audio_example.mp3 -p spleeter:4stems/"
+    "!spleeter separate -i audio_example.mp3 -o audio_output -p spleeter:4stems/"
    ]
   },
   {
