--- a/spleeter.ipynb
+++ b/spleeter.ipynb
@@ -81,7 +81,7 @@
    },
    "outputs": [],
    "source": [
-    "!wget https://github.com/ivanko2k/New/raw/master/audio_example.mp3"
+    "!wget https://github.com/deezer/spleeter/raw/master/audio_example.mp3"
    ]
   },
   {
@@ -132,7 +132,7 @@
    },
    "outputs": [],
    "source": [
-    "!spleeter separate -i audio_example.mp3 -o audio_output -p spleeter:5stems"
+    "!spleeter separate -i audio_example.mp3 -o output/"
    ]
   },
   {
